[package]
name = "devlog"
version = "1.1.0"
authors = ["Will Daly"]
edition = "2018"
description = "devlog is a command-line tool for tracking your day-to-day software development work."
repository = "https://github.com/wedaly/devlog"
homepage = "https://devlog-cli.org"
readme = "README.md"
keywords = ["task", "todo", "development", "planning", "cli"]
categories = ["command-line-utilities", "text-processing"]
license = "MIT"
exclude = ["docs/*", "integrations/*"]

[dependencies]
chrono = "0.4.15"
clap = "2.33.3"
dirs = "3.0.1"
tempfile = "3.1.0"

[badges]
travis-ci = { repository = "wedaly/devlog" }

[package.metadata.deb]
section = "utils"
extended-description = """\
devlog is a tool for tracking your day-to-day software development work.
It is designed to integrate easily with other command-line tools like
vim and git.
"""
depends = "$auto, nano"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
devlog = { path = "/usr/bin/devlog" }
