[package]
name = "devlog"
version = "1.2.0"
authors = ["Will Daly"]
edition = "2018"
description = "devlog is a command-line tool for tracking your day-to-day software development work."
repository = "https://github.com/wedaly/devlog"
homepage = "https://devlog-cli.org"
readme = "README.md"
keywords = ["task", "todo", "development", "planning", "cli"]
categories = ["command-line-utilities", "text-processing"]
license = "MIT"
exclude = ["docs/*"]

[dependencies]
chrono = "0.4.19"
clap = "2.33.3"
dirs = "4.0.0"
tempfile = "3.2.0"
